
[TestNoUnsafeReturnRule/invalid-0 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:18)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return 1 as any;
     |   ~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-1 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:29)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return Object.create(null);
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-2 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:18)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   2 | const foo = () => {
   3 |   return 1 as any;
     |   ~~~~~~~~~~~~~~~~
   4 | };
---

[TestNoUnsafeReturnRule/invalid-3 - 1]
Diagnostic 1: unsafeReturn (1:19 - 1:37)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = () => Object.create(null);
     |                   ~~~~~~~~~~~~~~~~~~~
---

[TestNoUnsafeReturnRule/invalid-4 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:21)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `any[]`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return [] as any[];
     |   ~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-5 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:26)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `any[]`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return [] as Array<any>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-6 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:30)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `readonly any[]`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return [] as readonly any[];
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-7 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:31)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `readonly any[]`. Return a safely typed value or narrow the value before returning it.
   2 | function foo() {
   3 |   return [] as Readonly<any[]>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-8 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:21)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `any[]`. Return a safely typed value or narrow the value before returning it.
   2 | const foo = () => {
   3 |   return [] as any[];
     |   ~~~~~~~~~~~~~~~~~~~
   4 | };
---

[TestNoUnsafeReturnRule/invalid-9 - 1]
Diagnostic 1: unsafeReturn (1:19 - 1:29)
Message: Unsafe return of a value of type `any[]`.
Help: Returned expression has type `any[]`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = () => [] as any[];
     |                   ~~~~~~~~~~~
---

[TestNoUnsafeReturnRule/invalid-10 - 1]
Diagnostic 1: unsafeReturnAssignment (3:3 - 3:24)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Set<string> {
   3 |   return new Set<any>();
     |   ~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-11 - 1]
Diagnostic 1: unsafeReturnAssignment (3:3 - 3:32)
Message: Unsafe return of type `Map<string, any>` from function with return type `Map<string, string>`.
Help: Returned expression has type `Map<string, any>`; the function return type is `Map<string, string>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Map<string, string> {
   3 |   return new Map<string, any>();
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-12 - 1]
Diagnostic 1: unsafeReturnAssignment (3:3 - 3:26)
Message: Unsafe return of type `Set<any[]>` from function with return type `Set<string[]>`.
Help: Returned expression has type `Set<any[]>`; the function return type is `Set<string[]>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Set<string[]> {
   3 |   return new Set<any[]>();
     |   ~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-13 - 1]
Diagnostic 1: unsafeReturnAssignment (3:3 - 3:34)
Message: Unsafe return of type `Set<Set<Set<any>>>` from function with return type `Set<Set<Set<string>>>`.
Help: Returned expression has type `Set<Set<Set<any>>>`; the function return type is `Set<Set<Set<string>>>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Set<Set<Set<string>>> {
   3 |   return new Set<Set<Set<any>>>();
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-14 - 1]
Diagnostic 1: unsafeReturnAssignment (3:24 - 3:37)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   2 | type Fn = () => Set<string>;
   3 | const foo1: Fn = () => new Set<any>();
     |                        ~~~~~~~~~~~~~~
   4 | const foo2: Fn = function test() {

Diagnostic 2: unsafeReturnAssignment (5:3 - 5:24)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   4 | const foo2: Fn = function test() {
   5 |   return new Set<any>();
     |   ~~~~~~~~~~~~~~~~~~~~~~
   6 | };
---

[TestNoUnsafeReturnRule/invalid-15 - 1]
Diagnostic 1: unsafeReturnAssignment (4:16 - 4:29)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   3 | function receiver(arg: Fn) {}
   4 | receiver(() => new Set<any>());
     |                ~~~~~~~~~~~~~~
   5 | receiver(function test() {

Diagnostic 2: unsafeReturnAssignment (6:3 - 6:24)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   5 | receiver(function test() {
   6 |   return new Set<any>();
     |   ~~~~~~~~~~~~~~~~~~~~~~
   7 | });
---

[TestNoUnsafeReturnRule/invalid-16 - 1]
Diagnostic 1: unsafeReturnThis (3:3 - 3:14)
Message: Unsafe return of a value of type `any`. `this` is typed as `any`.
Help: Returned expression has type `any`. Enable `noImplicitThis` or add an explicit `this` parameter to the function.
   2 | function foo() {
   3 |   return this;
     |   ~~~~~~~~~~~~
   4 | }

Diagnostic 2: unsafeReturnThis (7:16 - 7:19)
Message: Unsafe return of a value of type `any`. `this` is typed as `any`.
Help: Returned expression has type `any`. Enable `noImplicitThis` or add an explicit `this` parameter to the function.
   6 | function bar() {
   7 |   return () => this;
     |                ~~~~
   8 | }
---

[TestNoUnsafeReturnRule/invalid-17 - 1]
Diagnostic 1: unsafeReturn (3:11 - 3:22)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `any`. Return a safely typed value or narrow the value before returning it.
   2 | declare function foo(arg: null | (() => any)): void;
   3 | foo(() => 'foo' as any);
     |           ~~~~~~~~~~~~
   4 |       
---

[TestNoUnsafeReturnRule/invalid-18 - 1]
Diagnostic 1: unsafeReturn (5:3 - 5:15)
Message: Unsafe return of a value of type error.
Help: Returned expression has type `error`. Return a safely typed value or narrow the value before returning it.
   4 | function example() {
   5 |   return value;
     |   ~~~~~~~~~~~~~
   6 | }
---

[TestNoUnsafeReturnRule/invalid-19 - 1]
Diagnostic 1: unsafeReturn (4:3 - 4:15)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   3 | async function foo() {
   4 |   return value;
     |   ~~~~~~~~~~~~~
   5 | }
---

[TestNoUnsafeReturnRule/invalid-20 - 1]
Diagnostic 1: unsafeReturn (4:3 - 4:15)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any>`; the function return type is `Promise<number>`. Return a safely typed value or narrow the value before returning it.
   3 | async function foo(): Promise<number> {
   4 |   return value;
     |   ~~~~~~~~~~~~~
   5 | }
---

[TestNoUnsafeReturnRule/invalid-21 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:29)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo(arg: number) {
   3 |   return arg as Promise<any>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-22 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:19)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `Promise<any>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Promise<any> {
   3 |   return {} as any;
     |   ~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-23 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:19)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `Promise<object>`. Return a safely typed value or narrow the value before returning it.
   2 | function foo(): Promise<object> {
   3 |   return {} as any;
     |   ~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-24 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:34)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any>`; the function return type is `Promise<object>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo(): Promise<object> {
   3 |   return Promise.resolve<any>({});
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-25 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:68)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any>`; the function return type is `Promise<object>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo(): Promise<object> {
   3 |   return Promise.resolve<Promise<Promise<any>>>({} as Promise<any>);
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-26 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:55)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<Promise<Promise<Promise<any>>>>`; the function return type is `Promise<object>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo(): Promise<object> {
   3 |   return {} as Promise<Promise<Promise<Promise<any>>>>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-27 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:55)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<Promise<Promise<Promise<any>>>>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo() {
   3 |   return {} as Promise<Promise<Promise<Promise<any>>>>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-28 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:46)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any> | Promise<object>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo() {
   3 |   return {} as Promise<any> | Promise<object>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-29 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:37)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any>`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo() {
   3 |   return {} as Promise<any | object>;
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-30 - 1]
Diagnostic 1: unsafeReturn (3:3 - 3:49)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Promise<any> & { __brand: "any"; }`. Return a safely typed value or narrow the value before returning it.
   2 | async function foo() {
   3 |   return {} as Promise<any> & { __brand: 'any' };
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeReturnRule/invalid-31 - 1]
Diagnostic 1: unsafeReturn (8:3 - 8:15)
Message: Unsafe return of a value of type `Promise<any>`.
Help: Returned expression has type `Alias<number>`. Return a safely typed value or narrow the value before returning it.
   7 | async function foo() {
   8 |   return value;
     |   ~~~~~~~~~~~~~
   9 | }
---

[TestNoUnsafeReturnRule/invalid-32 - 1]
Diagnostic 1: unsafeReturnAssignment (3:23 - 3:36)
Message: Unsafe return of type `Set<any>` from function with return type `Set<string>`.
Help: Returned expression has type `Set<any>`; the function return type is `Set<string>`. Return a safely typed value or narrow the value before returning it.
   2 | import type { Fn } from 'return-types';
   3 | const foo: Fn = () => new Set<any>();
     |                       ~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnsafeReturnRule/invalid-33 - 1]
Diagnostic 1: unsafeReturn (7:3 - 7:16)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `Infer<S>`. Return a safely typed value or narrow the value before returning it.
   6 | const getOutput = <S extends Schema>(schema: S): Infer<S> =>
   7 |   schema._output;
     |   ~~~~~~~~~~~~~~
---

[TestNoUnsafeReturnRule/invalid-34 - 1]
Diagnostic 1: unsafeReturn (9:3 - 9:15)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `any`. Return a safely typed value or narrow the value before returning it.
   8 | const f = function (value) {
   9 |   return value;
     |   ~~~~~~~~~~~~~
  10 | };
---

[TestNoUnsafeReturnRule/invalid-35 - 1]
Diagnostic 1: unsafeReturn (8:20 - 8:24)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `any`. Return a safely typed value or narrow the value before returning it.
   7 | /** @type {Fn} */
   8 | const f = value => value;
     |                    ~~~~~
---

[TestNoUnsafeReturnRule/invalid-36 - 1]
Diagnostic 1: unsafeReturn (9:20 - 9:24)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `number`. Return a safely typed value or narrow the value before returning it.
   8 | /** @type {Fn} */
   9 | const f = value => value;
     |                    ~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-0 - 1]
Diagnostic 1: unsafeReturn (1:19 - 1:26)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = () => 1 as any;
     |                   ~~~~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-1 - 1]
Diagnostic 1: unsafeReturn (1:27 - 1:42)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = function () { return 1 as any; };
     |                           ~~~~~~~~~~~~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-2 - 1]
Diagnostic 1: unsafeReturn (1:27 - 1:34)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `number`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = (): number => 1 as any;
     |                           ~~~~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-3 - 1]
Diagnostic 1: unsafeReturn (1:35 - 1:50)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `number`. Return a safely typed value or narrow the value before returning it.
   1 | const foo = function (): number { return 1 as any; };
     |                                   ~~~~~~~~~~~~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-4 - 1]
Diagnostic 1: unsafeReturn (1:33 - 1:40)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `number`. Return a safely typed value or narrow the value before returning it.
   1 | const foo: () => number = () => 1 as any;
     |                                 ~~~~~~~~
---

[TestNoUnsafeReturnRule_ReturnTypeHelp/invalid-5 - 1]
Diagnostic 1: unsafeReturn (1:41 - 1:56)
Message: Unsafe return of a value of type `any`.
Help: Returned expression has type `any`; the function return type is `number`. Return a safely typed value or narrow the value before returning it.
   1 | const foo: () => number = function () { return 1 as any; };
     |                                         ~~~~~~~~~~~~~~~~
---
